--- a/index.css
+++ b/index.css
@@ -4,8 +4,8 @@
 
 body {
     margin: 0;
-    font-family: "Hanken Grotesk",Arial, sans-serif;
-    background-color: #282726;
+    font-family: "Hanken Grotesk", Arial, sans-serif;
+    background-color: #262626;
     color: #D9D9D9;
     padding: 20px;
     height: 100vh;
@@ -36,13 +36,45 @@ section.game-status {
     align-items: center;
     color: #F9F4DA;
     border-radius: 4px;
-    margin-block: 30px
+    margin-block: 30px;
 }
 
 section.game-status > p {
     margin: 5px;
 }
+
 section.game-status > h2 {
     font-size: 1.25rem;
     margin: 5px
+}
+
+section.language-chips {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: center;
+    max-width: 350px;
+    margin-bottom: 36px;
+}
+
+span.chip {
+    border-radius: 3px;
+    padding: 4.5px;
+}
+
+section.word{
+    display: flex;
+    justify-content: center;
+    gap: 9px;
+}
+
+section.word > span {
+    height: 40px;
+    width: 40px;
+    background-color: #323232;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.125rem;
+    border-bottom: 1px solid #F9F4DA;
 }
