--- a/index.css
+++ b/index.css
@@ -121,6 +121,10 @@ section.word > span {
     border-bottom: 1px solid #F9F4DA;
 }
 
+section.word > span.missed-letter {
+    color: #EC5D49;
+}
+
 section.keyboard {
     display: flex;
     flex-wrap: wrap;
@@ -137,6 +141,11 @@ section.keyboard > button {
     border: 1px solid #D7D7D7;
     border-radius: 3px;
     cursor: pointer;
+}
+
+section.keyboard > button:disabled{
+    cursor: not-allowed;
+    opacity: 50%;
 }
 
 section.keyboard > button.correct {
